--- a/public/global.css
+++ b/public/global.css
@@ -7,8 +7,8 @@ body {
 
 html,
 body {
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     display: flex;
     flex-flow: column;
 }
